# tmux-agent-session

./: .gitignore  AGENTS.md  Makefile  README.md  main.py  pyproject.toml  session_inspector.py
.github/workflows/: ci.yml  release-dispatch.yml  release.yml
packaging/homebrew/: tmux-agent-session.rb
src/tmux_agent_session/: __init__.py  ansi.py  cli.py  commands.py  formatting.py  models.py  picker.py  processes.py  release.py  scoring.py  session_files.py  tmux.py
src/tmux_agent_session/harnesses/: __init__.py  claude.py  codex.py  cursor.py  opencode.py
tests/: test_cli_helpers.py  test_cli_main.py  test_cli_output.py  test_cli_scoring.py  test_cli_sessions.py  test_picker_textual.py  test_release_helpers.py
