[project]
name = "tmux-agent-session"
version = "0.1.0"
description = "Inspect and jump to active Codex and OpenCode tmux sessions"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[project.scripts]
tmux-agent-session = "tmux_agent_session.cli:main"
tas = "tmux_agent_session.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tmux_agent_session"]
