[project]
name = "tmux-agent-session"
dynamic = ["version"]
description = "Inspect and jump to active Codex and OpenCode tmux sessions"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "rich>=15.0.0,<16",
    "textual>=8.2.5,<9",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[project.scripts]
tmux-agent-session = "tmux_agent_session.cli:main"
tas = "tmux_agent_session.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/tmux_agent_session/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/tmux_agent_session"]
